--- a/SoftwareFinalProject_Web/ToDoWebApp/tasks/templates/tasks/assignment_detail.html
+++ b/SoftwareFinalProject_Web/ToDoWebApp/tasks/templates/tasks/assignment_detail.html
@@ -59,9 +59,9 @@
             background-color: #c82333;
         }
         .btn-secondary {
-            background-color: #6c757d;
-            color: white;
-            border: none;
+            background-color: white;
+            color: black;
+            border: black;
         }
         .btn-secondary:hover {
             background-color: #5a6268;
